# docs/swagger.yaml
@@ -14,6 +14,13 @@ definitions:
       salary:
         type: number
     type: object
+  response.ErrorResponse:
+    properties:
+      errorCode:
+        type: integer
+      message:
+        type: string
+    type: object
   response.SuccessResponse:
     properties:
       data:
@@ -66,6 +73,14 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/response.SuccessResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
       summary: Create a new opening
       tags:
       - openings
@@ -85,6 +100,14 @@ paths:
       responses:
         "204":
           description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
       summary: Delete a opening
       tags:
       - openings
@@ -105,6 +128,14 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/response.SuccessResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
       summary: get a opening
       tags:
       - openings
@@ -131,6 +162,14 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/response.SuccessResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
       summary: Update a opening
       tags:
       - openings
@@ -148,6 +187,14 @@ paths:
             items:
               $ref: '#/definitions/response.SuccessResponse'
             type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
       summary: List all openings
       tags:
       - openings
